--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Mi Perfil - Almanzur </title>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
-        body {background-color: beige; font-family: fantasy; font-style: italic; text-align: justify;}
+        body {background-color: beige; font-family: Montserrat; font-style: italic; text-align: justify;}
     </style>
     <link rel="stylesheet" type="text/css" href="stylesjhon.css">
     <script src="validacion.js"></script>
@@ -22,7 +22,7 @@
         <label for="name"> Nombre/Pseudonimo </label>
         <input type="text" id="name" name="name" placeholder="¡Me llamo Almanzur!" required>  
         <label for="email"> Correo Corporativo </label>
-        <input type="text" id="email" name="email" placeholder="almanzur@iesvirgendelcarmen.es" required>
+        <input type="email" id="email" name="email" placeholder="almanzur@iesvirgendelcarmen.es" required>
         <label for="message"> ¿Quién Soy? </label> 
         <textarea name="message" id="message" placeholder="Soy un Pseudonimo construido con IA y estoy experimentando el uso combinado de HTML con CSS"></textarea>
         <button type="submit"> Envialo! </button>
